fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,7 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow: hidden;
 }
 
 .services--text {
